feat(product): refactor category handling to support many-to-many relationships